EPBR-9343: Creates an API endpoint to update Scottish assessments address id
Updates the swagger doc with the new endpoint
