# api/api.yml
@@ -3024,6 +3024,63 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /scotland/assessments/{assessmentId}/address-id:
+    put:
+      tags:
+        - Scotland Assessment Management
+      summary: Update the canonical Scottish address ID for an assessment
+      description: Update the Scottish address ID used to link this assessment with other assessments
+      operationId: update-canonical-scottish-address-id
+      security:
+        - oauth:
+            - 'scotland_admin:update-address-id'
+      parameters:
+        - in: path
+          name: assessmentId
+          required: true
+          description: 'The ID of the assessment being updated'
+          schema:
+            $ref: '#/components/schemas/AssessmentId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                addressId:
+                  $ref: '#/components/schemas/AddressId'
+      responses:
+        '200':
+          description: Confirmation of successful update
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: string
+                    example: "Address ID for assessment 1234-1234-1234-1234-1234 has been updated successfully"
+                  meta:
+                    type: object
+        '400':
+          description: Bad request - the assessmentId or addressId is badly formatted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Assessment not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '503':
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
   /scotland/v1/assessments/{assessmentId}/xml-data:
     get:
       tags:
